# roo

./: .coverage  .dockerignore  .env.example  .gitignore  .roomodes  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.npm  Dockerfile.yarn  MCP_TOOLS_INVENTORY.md  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  compose.debug.yaml  coverage.xml  custom_models.yaml  custom_modes.yaml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.py  merge.go  merge.py  performance_benchmark.py  pyproject.toml  pytest.ini  run_server.py  test_api.py  test_config_management_permissions.py  test_decorator_registration.py  test_fixed.py  test_frontend.js  test_knowledge_base.py  test_logger.py  test_mcp_integration.py  test_platform_paths.py  test_remote_permissions.py  test_simple.py  (+2 more)
.claude/: settings.local.json
.github/: ORGANIZATION.md  release.yml
app/: __init__.py  database.py  main.py  main_functional.py  main_minimal.py  main_optimized.py  main_ultra.py
code_snippet/: code.md  markdown.md
custom_models/: architect.yaml  ask.yaml  brain.yaml  code.yaml  coder.yaml  debug.yaml  doc-writer.yaml  giter.yaml  memory.yaml  mode-writer.yaml  project-research.yaml  researcher.yaml
custom_models_split/: article_summarizer.yaml  brain.yaml  config-mover.yaml  deep_research.yaml  document-mover.yaml  git-auto-commit.yaml  git_auto_commit.yaml  integ.yaml  knowledge_base_creator.yaml  knowledge_research.yaml  nexuscore.yaml  prompt-engineer.yaml  prompt_engineer.yaml  resource-mover.yaml  translator.yaml  web_scraper_parser.yaml
docs/: API.md  BRANDING.md  Backend.md  DEVELOPMENT.md  QUICKSTART.md  README.md  STARTUP_DEMO.md  api-endpoints-analysis.md  api-reference.md  api.md  custom-modes.mdx  database-design.md  deployment.md  format-validation-report.md  frontend.md  initializer.txt  lazy_philosophy.md  openapi.yaml  postman-collection.json  postman-collection.md  rules.md  user_guide.md  validation-report.md
frontend/: jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  persistent-volumes.yaml  service.yaml
locales/: ar.json  en.json  es.json  fr.json  ja.json  ru.json  zh-CN.json  zh-TW.json
mcp/: .dockerignore  .gitignore  Dockerfile  MEMORY_TOOLS.md  Makefile  README.md  cache.py  config.py  config.yaml  config.yaml.example  croe.py  go.mod  go.sum  main.py  mcp_server_config.json  mcp_services.json  pyproject.toml  test.py  tools.py  tools_bash.py  tools_cache.py  tools_feath.py  tools_file.py  tools_github.py  tools_library.py  tools_notify.py  tools_search.py  tools_system.py  tools_time.py
mcp/.roo/rules/: base.md
mcp/core/: __init__.py  cache.py  config.py  croe.py  logger.py
mcp/docs/: api.md  cache.md  config.md  deployment.md  development.md  memory.md
mcp/docs/memory/: 01_introduction.md  02_architecture.md  03_data_model.md  04_intelligent_engine.md  05_lifecycle_management.md  06_implementation_roadmap.md  README.md
mcp/docs/tools/: memory_tools.md
mcp/scripts/: README_check_searx.md  __init__.py  build.sh  check_searx.py
mcp/src/: cache.py  config.py  logger.py  server.py
mcp/src/memory/: core.py  database.py  engine.py  knowledge.py  knowledge_manager.py  memory_manager.py  models.py  working.py  working_manager.py
mcp/src/memory_prototype/: engine_logic.py  models.py
mcp/src/tools/: __init__.py  file_operations.py  memory.py  searx.py  timestamp.py
mcp/src/utils/: env_detector.py
mcp/tests/: __init__.py  test_conditional_tool_loading.py  test_file_operations.py  test_memory.py
mcp/tests/tools/: test_memory.py  test_timestamp.py
mcp/tools/: __init__.py  bash.py  cache.py  feath.py  file.py  github.py  library.py  memory.py  memory_entity.py  memory_graph.py  memory_observation.py  memory_relation.py  notify.py  search.py  system.py  task.py  time.py
models_hook/: after.md  before.md
roles/: bunny_maid.yaml  cat_food_maid.yaml
scripts/: deploy-dev.sh
temp/: custom_modes_20250919_202043_ede968ef.yaml  custom_modes_20250919_203236_558906c8.yaml
templates/: index.html  mode_selector.html
tests/: __init__.py  conftest.py  test_30_percent_push.py  test_50_percent.py  test_80_percent_coverage_strategy.py  test_aggressive_50_percent.py  test_api.py  test_api_endpoints.py  test_api_post.py  test_backend_50_percent_boost.py  test_backend_boost.py  test_boost_existing_coverage.py  test_cache_tools_comprehensive.py  test_cache_tools_service_comprehensive.py  test_comprehensive_50_percent.py  test_comprehensive_api_endpoints.py  test_core_modules_efficient.py  test_core_services.py  test_database_service.py  test_database_service_lite_comprehensive.py  test_database_service_mega_coverage.py  test_database_validators_comprehensive.py  test_database_validators_simple.py  test_decorator_registration.py  test_fetch_tools_mega_coverage.py  test_final_50_percent_sprint.py  test_final_80_percent_push.py  test_final_coverage_boost.py  test_final_push_50_percent.py  test_force_50_percent_backend.py  test_functional_architecture.py  (+23 more)
(+453 files in other folders)
