[project]
name = "roo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "ruamel-yaml>=0.18.15",
    "uvicorn>=0.35.0",
    "vuepy-core>=0.1.10",
]
