[project]
name = "roo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "ruamel-yaml>=0.18.15",
    "tinydb>=4.8.2",
    "uvicorn>=0.35.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "pytz>=2025.2",
    "pytest-cov>=6.2.1",
]
