[project]
name = "lazyai-studio"
version = "1.0.0"
description = "LazyAI Studio - 懒人的 AI 智能工作室，为开发者提供专业的 AI 模式、角色和命令管理系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tinydb>=4.8.2",
    "uvicorn>=0.35.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "pytz>=2025.2",
    "pytest-cov>=6.2.1",
    "watchdog>=3.0.0",
    "psutil>=6.1.0",
    "orjson>=3.10.12",
    "uvloop>=0.21.0",
    "mcp>=1.13.1",
    "fastmcp>=2.12.2",
    "python-dateutil>=2.9.0.post0",
    "aiohttp>=3.10.11",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.12.3",
    "aiohttp-cors>=0.8.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "safety>=3.2.4",
]
